--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -40,6 +40,21 @@ jobs:
     - name: Run pre-commit hook
       uses: pre-commit/action@v3.0.1
 
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          password: ${{ secrets.PYANSYS_CI_BOT_PACKAGE_TOKEN }}
+      - run: docker pull ghcr.io/ansys/aali-graphdb:edge
+      - run: go test -v ./pkg/...
+
   build:
     name: Build project
     needs: [style]
@@ -183,7 +198,7 @@ jobs:
   release:
     name: Generate GitHub release
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    needs: [doc-api-reference, build]
+    needs: [doc-api-reference, build, unit-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
