--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,30 @@ dist
 # Extra
 .venv
 doc/_build
+
+# macOS
+.DS_Store
+
+# Documentation build artifacts
+doc/build/
+doc/sphinx_build.log
+doc/vale_output.txt
+sphinx_build_output.txt
+
+# Python virtual environments
+venv/
+doc/venv/
+doc/venv_new/
+doc_venv/
+
+# Generated API documentation
+doc/scripts/
+doc/source/api_reference/aali_graphdb/
+doc/source/api_reference/clients/
+doc/source/api_reference/config/
+doc/source/api_reference/grpc/
+doc/source/api_reference/grpc_proto/
+doc/source/api_reference/logging/
+doc/source/api_reference/sharedtypes/
+doc/source/api_reference/type_definitions/
+doc/source/api_reference/typeconverters/
