--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -227,9 +227,9 @@ jobs:
 
   upload_docs_release:
     name: Upload release documentation
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    if: github.event_name == 'push' && (contains(github.ref, 'refs/tags') || github.ref == 'refs/heads/main')
     runs-on: ubuntu-latest
-    needs: [release]
+    needs: [doc-api-reference]
     steps:
       - name: Deploy the stable documentation
         uses: ansys/actions/doc-deploy-stable@v9
