--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -97,9 +97,9 @@ jobs:
           cache-dependency-path: 'go.sum'
 
       - name: Install Protoc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
 
       - name: Install protoc-gen-go and protoc-gen-go-grpc
         run: |
