--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -22,15 +22,19 @@ jobs:
     name: Code style
     runs-on: ubuntu-latest
     steps:
-    - name: Install required tools
-      run : |
-        sudo apt-get update
-        sudo apt-get install -y golang-go golang-golang-x-tools
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
-        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 'stable'
+
+    - name: Install golangci-lint
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.2
+
+    - name: Add Go bin to PATH
+      run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
     - name: Setup Python for pre-commit hook
       uses: actions/setup-python@v5
