--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -46,6 +46,15 @@ jobs:
     - name: Run pre-commit hook
       uses: pre-commit/action@v3.0.1
 
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+      - run: go test $(go list ./pkg/... | grep -v 'aali_graphdb')  # run all the tests except for those in aali_graphdb (those are run below in separate job)
+
   graphdb-client-unit-tests:
     uses: ./.github/workflows/graphdb-client-tests.yml
     secrets: inherit
