--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -22,15 +22,21 @@ jobs:
     name: Code style
     runs-on: ubuntu-latest
     steps:
-    - name: Install required tools
-      run : |
-        sudo apt-get update
-        sudo apt-get install -y golang-go golang-golang-x-tools
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
-        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-
     - name: Checkout repository
       uses: actions/checkout@v4
+
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 'stable'
+
+    - name: Install Go tools
+      run: |
+        go install golang.org/x/tools/cmd/goimports@latest
+        go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@latest
+
+    - name: Add Go bin to PATH
+      run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
     - name: Setup Python for pre-commit hook
       uses: actions/setup-python@v5
@@ -97,9 +103,9 @@ jobs:
           cache-dependency-path: 'go.sum'
 
       - name: Install Protoc
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
 
       - name: Install protoc-gen-go and protoc-gen-go-grpc
         run: |
@@ -111,8 +117,13 @@ jobs:
 
       - name: Compile protofiles
         run: |
-          protoc --go_out=pkg --go-grpc_out=pkg ./pkg/aaliflowkitgrpc/aali-flowkit.proto
-          protoc --go_out=pkg --go-grpc_out=pkg ./pkg/aaliagentgrpc/aali-agent.proto
+          # Find the protoc include directory
+          PROTOC_INCLUDE=$(dirname $(which protoc))/../include
+          echo "Using protoc include path: $PROTOC_INCLUDE"
+          ls -la "$PROTOC_INCLUDE/google/protobuf/" || echo "Include path not found"
+
+          protoc --proto_path=. --proto_path="$PROTOC_INCLUDE" --go_out=pkg --go-grpc_out=pkg ./pkg/aaliflowkitgrpc/aali-flowkit.proto
+          protoc --proto_path=. --proto_path="$PROTOC_INCLUDE" --go_out=pkg --go-grpc_out=pkg ./pkg/aaliagentgrpc/aali-agent.proto
           go mod tidy
           go mod verify
 
